tests/snapshots/custom_menu/fmSyntaxColorizer/File Menu ADMIN - ID 2.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="File Menu ADMIN" id="2">
	<UUID modifications="6" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">04896DA4-5253-488B-BBB2-130A61C58641</UUID>
	<MenuItemList membercount="25">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Neu erstellen..." id="57600"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="" id="49369"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="79" modifier="4"></Shortcut>
			<Command name="Öffnen..." id="57601"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="79" modifier="5"></Shortcut>
			<Command name="Hosts anzeigen..." id="49222"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="12" name="[Letzte öffnen]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="34" name="[Favorit öffnen]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="87" modifier="4"></Shortcut>
			<Command name="Schließen" id="57602"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="17" name="[Verwalten]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="22" name="[Sharing]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Dateioptionen..." id="49154"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Passwort ändern..." id="50152"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Papierformat..." id="57606"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="80" modifier="4"></Shortcut>
			<Command name="Drucken..." id="57607"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="13" name="[Datensätze importieren]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Datensätze exportieren..." id="50167"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="14" name="[Datensätze speichern/senden unter]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="True" isSeparatorItem="False">
			<CustomMenuReference id="33" name="[Senden]"></CustomMenuReference>
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Kopie speichern unter..." id="49224"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Command name="Wiederherstellen..." id="49223"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="True">
			<Conditions>
				<Install>
					<Calculation><![CDATA[Wenn( Abs(Hole( SystemPlattform )) = 2; 1; 0 )]]></Calculation>
					<ChunkList hash="E62B4F55AE0CC9EF21640EC028CAB70F">
						<Chunk type="FunctionRef">Wenn</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">Abs</Chunk>
						<Chunk type="NoRef">(</Chunk>
						<Chunk type="FunctionRef">Hole</Chunk>
						<Chunk type="NoRef">( </Chunk>
						<Chunk type="FunctionRef">SystemPlattform</Chunk>
						<Chunk type="NoRef"> )) = 2; 1; 0 )</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Ablage" value="2"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
