tests/snapshots/custom_menu/fmSyntaxColorizer/Insert Menu - ID 5.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="Insert Menu" id="5">
	<UUID modifications="6" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">65ACE0E6-FAF3-4196-8FE7-C627B1531882</UUID>
	<MenuItemList membercount="2">
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="73" modifier="4"></Shortcut>
			<Command name="Aus Index..." id="49246"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
		<CustomMenuItem isSubMenuItem="False" isSeparatorItem="False">
			<Conditions>
				<Install>
					<Calculation><![CDATA[1]]></Calculation>
					<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
						<Chunk type="NoRef">1</Chunk>
					</ChunkList>
				</Install>
			</Conditions>
			<Shortcut key="220" modifier="4"></Shortcut>
			<Command name="Aus zuletzt besuchtem Datensatz" id="49242"></Command>
			<Override name="False" action="False" Shortcut="False"></Override>
		</CustomMenuItem>
	</MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Einfügen" value="5"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
