tests/snapshots/custom_menu/fmSyntaxColorizer/[Ausrichtung] - ID 16.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Ausrichtung]" id="16">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">60CBB96B-BB79-4A99-AFEF-80E2F8B1D6BF</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Ausrichtung" value="22"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
