tests/snapshots/custom_menu/fmSyntaxColorizer/[Datensätze importieren] - ID 13.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Datensätze importieren]" id="13">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">196D6621-D89C-4EDE-A4C5-5826CA6CD41E</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Datensätze importieren" value="155"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
