tests/snapshots/custom_menu/fmSyntaxColorizer/[Fenster einblenden] - ID 25.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Fenster einblenden]" id="25">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">72CA3692-B555-44E2-A50A-A439C7A59A99</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Fenster einblenden" value="38"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
