tests/snapshots/custom_menu/fmSyntaxColorizer/[Gehe zu Datensatz] - ID 24.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Gehe zu Datensatz]" id="24">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">392F7B75-B0E1-4ED6-8E42-D74172799875</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gehe zu Datensatz" value="159"></Base>
	<Options browseMode="True" findMode="False" previewMode="True"></Options>
</CustomMenu>
