tests/snapshots/custom_menu/fmSyntaxColorizer/[Gespeicherte Suchen] - ID 32.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Gespeicherte Suchen]" id="32">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">5E164412-2C35-4383-8A16-6D6BBC86B160</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Gespeicherte Suchen" value="199"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
