tests/snapshots/custom_menu/fmSyntaxColorizer/[Letzte öffnen] - ID 12.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Letzte öffnen]" id="12">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">FB902C77-9399-4CDA-900C-73FDE3EA9DAD</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Letzte" value="32"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
