tests/snapshots/custom_menu/fmSyntaxColorizer/[Rechtschreibung] - ID 27.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Rechtschreibung]" id="27">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">2BBA02AD-7FAE-413C-B9FC-E3D299D786C4</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Rechtschreibung" value="19"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
