tests/snapshots/custom_menu/fmSyntaxColorizer/[Schrift] - ID 19.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Schrift]" id="19">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">7438C8DB-B788-46CA-96D4-805D8E152E2B</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Schrift" value="18"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
