tests/snapshots/custom_menu/fmSyntaxColorizer/[Scripts] - ID 9.xml.snap
---
source: src/main.rs
expression: output_content
---
<CustomMenu name="[Scripts]" id="9">
	<UUID modifications="2" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">F04E0340-9260-4D77-B2BA-FE8D2CF2ECDA</UUID>
	<MenuItemList membercount="0"></MenuItemList>
	<Conditions>
		<Install>
			<Calculation><![CDATA[1]]></Calculation>
			<ChunkList hash="A93F17BC54CA1958073B692697D5ED21">
				<Chunk type="NoRef">1</Chunk>
			</ChunkList>
		</Install>
	</Conditions>
	<Comment></Comment>
	<Base name="Scripts" value="8"></Base>
	<Options browseMode="True" findMode="True" previewMode="True"></Options>
</CustomMenu>
